--- a/src/components/RickAndMorty/RickAndMorty.css
+++ b/src/components/RickAndMorty/RickAndMorty.css
@@ -2,24 +2,23 @@
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
-  padding: 0;
-  list-style: none;
+  padding: 20px;
   justify-content: center;
-  align-items: center;
 }
 
 .card-item {
-  width: 200px; /* Фиксированная ширина карточки */
-  border: 1px solid #ccc;
-  border-radius: 8px;
-  padding: 15px;
-  text-align: center;
+  width: 200px;
+  height: 400px; /* фиксированная высота карточки */
+  display: flex;
+  flex-direction: column;
 }
 
-.card-item img {
-  border-radius: 4px;
-  margin-top: 10px;
+.card-item .MuiCardActionArea-root {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
 }
-p{
-  margin: 0;
+
+.card-item .MuiCardContent-root {
+  flex-grow: 1;
 }
